--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "genfontgl",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Create a fontstack folder from a TTF font for Mapbox GL",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sabas/edifact"
+    "url": "https://github.com/sabas/genfontgl.git"
   },
   "bin": {
     "genfontgl": "index.js"
